--- a/google_colab.html
+++ b/google_colab.html
@@ -349,11 +349,11 @@ kbd {
 <p><em>Python</em>コードを書いて動かしてみよう</p>
 </blockquote>
 
-<p><img src="colab_mkdir.png" width=40%>
-<img src="colab_mkfile.png" width=40%></p>
+<p><img src="photos/colab_mkdir.png" width=40%>
+<img src="photos/colab_mkfile.png" width=40%></p>
 
 <p>左上の<code>ファイル</code>から<code>ノートブックを新規作成</code>をクリック。すると別タブへ移動する。
-<img src="colab_notebook.png"></p>
+<img src="photos/colab_notebook.png"></p>
 
 <p>すると<code>Untitled.ipynb</code>というファイルが作成される。ついでにファイル名を<code>python_intro.ipynb</code>に変更しましょう。</p>
 
@@ -363,7 +363,7 @@ kbd {
 <p>どこにコード書くねん</p>
 </blockquote>
 
-<p><img src="colab_helo.png"></p>
+<p><img src="photos/colab_helo.png"></p>
 
 <p>この部分にコードを記述していきます。また左側のボタンでコードを実行することができます。では初めに<code>print(&#39;Hello Python World&#39;)</code>と書いて実行してみましょう。<code>Hello Python World</code>と出力されます。</p>
 
