--- a/python_intro.html
+++ b/python_intro.html
@@ -363,7 +363,7 @@ kbd {
 
 <div><pre><code class="language-:Terminal">アプリケーション → ユーティリティ → ターミナル</code></pre></div>
 
-<p><img src="terminal_basic.png" width="50%"></p>
+<p><img src="photos/terminal_basic.png" width="50%"></p>
 
 <p>するとこのような見たことのない画面が出てくると思いますがまずは落ち着いてゆっくり進めましょう(環境によって表示されている画面が違う場合があります）</p>
 
@@ -383,7 +383,7 @@ Python 2.7.16</code></pre></div>
 </blockquote>
 
 <p><a href="https://www.python.org/downloads/">Python downloads</a>
-<img src="python_downloads.png">
+<img src="photos/python_downloads.png">
 <em>Download Python 3.9.1</em>からダウンロードする。</p>
 
 <p>インストールファイルを開いて、基本的には&quot;続ける&quot;を押して進めばインストールされるはずです。インストールが終わればターミナルで以下のコマンドを打ち込んでインストールされているか確認してください。</p>
