--- a/python_intro4.html
+++ b/python_intro4.html
@@ -349,8 +349,8 @@ kbd {
 
 <p><em>Finder</em>から自分の任意の場所にフォルダを作ります。</p>
 
-<p><img src="finder.png" width=40%>
-<img src="finder_mkdir.png" width=40%></p>
+<p><img src="photos/finder.png" width=40%>
+<img src="photos/finder_mkdir.png" width=40%></p>
 
 <p>今回は<code>書類(Documents) → python_intro</code>というフォルダを作りましょう。</p>
 
@@ -364,27 +364,27 @@ kbd {
 
 <div><pre><code class="language-:Terminal">print(&#39;Hello Python World&#39;)</code></pre></div>
 
-<p><img src="python_hello_world.png" width=60%></p>
+<p><img src="photos/python_hello_world.png" width=60%></p>
 
 <p>ファイルにコードが書けたら、<code>File(ファイル) → Save(保存)</code>からファイル名を<code>python_hello_world.py</code>にしましょう。<br>※ファイル名の最後は必ず<code>.py</code>をつけましょう。このファイルが<em>Python</em>を書いたものだと知らせるため。</p>
 
 <p>保存先は先ほど作成したフォルダに保存しましょう。</p>
 
-<p><img src="vs_code_mkfile.png" width=70%></p>
+<p><img src="photos/vs_code_mkfile.png" width=70%></p>
 
 <p>これで<em>Python</em>のファイルが完成しました。</p>
 
-<p><img src="folder_open.png" width=40%>
-<img src="select_folder.png" width=50%></p>
+<p><img src="photos/folder_open.png" width=40%>
+<img src="photos/select_folder.png" width=50%></p>
 
 <p>そして、<code>File(ファイル) → Open(開く)</code>から<code>python_intro</code>フォルダを開いてください。</p>
 
-<p><img src="pointer.png" width=40%>
-<img src="terminal_open.png" width=40%></p>
+<p><img src="photos/pointer.png" width=40%>
+<img src="photos/terminal_open.png" width=40%></p>
 
 <p>ウィンドウの下の部分にある<code>×0!0</code>のボタンを押して<code>Terminal(ターミナル)</code>を押してください。するとターミナルが<em>Visual Studio Code</em>上で開くことができます。ターミナルでファイルを実行しましょう。</p>
 
-<p><img src="python_demo.png" width=50%></p>
+<p><img src="photos/colab_helo.png" width=50%></p>
 
 <div><pre><code class="language-:Terminal">$ python3 python_hello_world.py
 Hello Python World</code></pre></div>
