change a little bit

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ kbd {
 
 <h2 id="toc_1">目標</h2>
 
-<p>このサイトではプログラミングの基礎的な知識を<em>Python</em>を用いて学ぶ。値の扱い方やアルゴリズムなどの考え方についての知識を獲得する。</p>
+<p>値の扱い方などのプログラミングの基礎的な知識をPythonを用いて獲得する。</p>
 
 <h2 id="toc_2">項目</h2>
 
