add table of contents

--- a/index.html
+++ b/index.html
@@ -344,6 +344,7 @@ kbd {
 <li><a href="python_intro2-2.html">Pythonを書いてみよう その2</a></li>
 <li><a href="google_colab.html"><em>Google Colaboratry</em>で実行</a></li>
 <li><a href="python_intro3.html">コードエディタをインストール</a></li>
+<li><a href="python_intro4.html">スクリプトファイルから実行</a></li>
 <li><a href="python_intro5.html">Pythonで複数行のコードを記述</a></li>
 </ul>
 
