--- a/python_intro4.html
+++ b/python_intro4.html
@@ -384,7 +384,7 @@ kbd {
 
 <p>ウィンドウの下の部分にある<code>×0!0</code>のボタンを押して<code>Terminal(ターミナル)</code>を押してください。するとターミナルが<em>Visual Studio Code</em>上で開くことができます。ターミナルでファイルを実行しましょう。</p>
 
-<p><img src="photos/colab_helo.png" width=50%></p>
+<p><img src="photos/python_demo.png" width=50%></p>
 
 <div><pre><code class="language-:Terminal">$ python3 python_hello_world.py
 Hello Python World</code></pre></div>
