change path in html file

--- a/google_colab.html
+++ b/google_colab.html
@@ -5,7 +5,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>google_colab</title>
+<title>Google Colaboratry</title>
 
 
 <style type="text/css">
@@ -373,7 +373,7 @@ kbd {
 
 <p><a href="python_intro.html">前へ(始める前に)</a></p>
 
-<p><a href="python_intro.html">初めに戻る</a></p>
+<p><a href="index.html">初めに戻る</a></p>
 
 
 
