--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>python_intro</title>
+<title>Basic Python</title>
 
 
 <style type="text/css">
@@ -398,7 +398,7 @@ Python 3.9.1</code></pre></div>
 
 <p><a href="python_intro2.html">次へ(Pythonを書いてみよう)</a></p>
 
-<p><a href="python_intro.html">初めに戻る</a></p>
+<p><a href="index.html">初めに戻る</a></p>
 
 
 
