--- a/python_intro2-2.html
+++ b/python_intro2-2.html
@@ -5,7 +5,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>python_intro2-2</title>
+<title>Pythonを書いてみよう その2</title>
 
 
 <style type="text/css">
@@ -382,7 +382,7 @@ True </code></pre></div>
 
 <p><a href="python_intro2.html">前へ(Pythonを書いてみよう)</a></p>
 
-<p><a href="python_intro.html">初めに戻る</a></p>
+<p><a href="index.html">初めに戻る</a></p>
 
 
 
