--- a/python_intro2.html
+++ b/python_intro2.html
@@ -5,7 +5,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>python_intro2</title>
+<title>Pythonを書いてみよう</title>
 
 
 <style type="text/css">
@@ -563,7 +563,7 @@ Python</code></pre></div>
 
 <p><a href="python_intro2-2.html">次へ(Pythonを書いてみよう その2)</a></p>
 
-<p><a href="python_intro.html">前へ(始める前に)</a></p>
+<p><a href="index.html">前へ(始める前に)</a></p>
 
 
 
