--- a/python_intro4.html
+++ b/python_intro4.html
@@ -5,7 +5,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>python_intro4</title>
+<title>スクリプトファイルから実行</title>
 
 
 <style type="text/css">
@@ -403,7 +403,7 @@ Hello Python World</code></pre></div>
 
 <p><a href="python_intro3.html">前へ(コードエディタをインストール)</a></p>
 
-<p><a href="python_intro.html">初めに戻る</a></p>
+<p><a href="index.html">初めに戻る</a></p>
 
 
 
