--- a/python_intro5.html
+++ b/python_intro5.html
@@ -5,7 +5,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>python_intro5</title>
+<title>Pythonで複数行のコード記述</title>
 
 
 <style type="text/css">
@@ -529,7 +529,7 @@ print(add)</code></pre></div>
 
 <p><a href="python_intro4.html">前へ(スクリプトファイルから実行)</a></p>
 
-<p><a href="python_intro.html">初めに戻る</a></p>
+<p><a href="index.html">初めに戻る</a></p>
 
 
 
