--- a/python_intro2.html
+++ b/python_intro2.html
@@ -343,7 +343,7 @@ kbd {
 
 <h3 id="toc_2">手順</h3>
 
-<p>ターミナルで<em>python3</em>と入力してみましょう</p>
+<p>ターミナルで<code>python3</code>と入力してみましょう</p>
 
 <div><pre><code class="language-Terminal">$ python3
 Python 3.9.1 (default, Jul 20 2020, 11:44:11) 
@@ -387,7 +387,7 @@ Type &quot;help&quot;, &quot;copyright&quot;, &quot;credits&quot; or &quot;licen
 <h3 id="toc_6">変数　</h3>
 
 <blockquote>
-<p>変数とはなんぞや？</p>
+<p>変数とはなんだろう？</p>
 </blockquote>
 
 <p><em>Python</em>に限らずプログラミング言語には値を格納する変数といわれるものがあります。繰り返し使いたい値をわかりやすい名前をつけてあとで参照できるようにするものです。
@@ -429,7 +429,7 @@ Traceback (most recent call last):
   File &quot;&lt;stdin&gt;&quot;, line 1, in &lt;module&gt;
 TypeError: can only concatenate str (not &quot;int&quot;) to str</code></pre></div>
 
-<p><code>TypeError</code>の部分を訳すと「strはstr(intではなく)にしか結合できません」という意味です。つまりstr(文字列)は文字列同士、int(数列)は数列同士しか結合できません。では<code>2</code>の部分を文字列に変換してあげる必要があります。</p>
+<p><code>TypeError</code>の部分を訳すと「strはstr(intではなく)にしか結合できません」という意味です。つまりstr(文字列)は文字列同士、int(数列)は数列同士しか結合できません。では<code>3</code>の部分を文字列に変換してあげる必要があります。</p>
 
 <div><pre><code class="language-:Terminal">&gt;&gt;&gt; line = &#39;Python&#39; + &#39;3&#39;
 &gt;&gt;&gt; print(line)
