--- a/index.html
+++ b/index.html
@@ -356,11 +356,16 @@ kbd {
 
 <blockquote>
 <p>macOS Catalina 10.15.7 or more</p>
+<p>その他OSはGoogle Colabの動作環境に依存します。</p>
 </blockquote>
 
 <p>これから説明する方法はmacOSを対象としています。Windowsやタブレットを利用している人(macOSも対象)は<a href="google_colab.html"><em>Google Colaboratory</em>で実行</a>を参照してください。</p>
 
 <p>以下の手順でターミナル(Terminal)というアプリケーションを起動してみましょう</p>
+
+<p><img src="photos/finder.png" width=40%></p>
+
+<p>Finderを起動して、以下順番でフォルダを開けてください。</p>
 
 <div><pre><code class="language-:Terminal">アプリケーション → ユーティリティ → ターミナル</code></pre></div>
 
@@ -377,7 +382,7 @@ Python 2.7.16</code></pre></div>
 <p>と表示されるはずです。（数字は環境によって異なる）
 ここで表示されている2から始まる数字はバージョンを示してます。これらはPythonの2系と言われるものです。Pythonには3系のバージョンも存在します。2系はすでにサポートが終了しているので    3系を利用するようにしましょう。</p>
 
-<h3 id="toc_6"><em>Python</em>をインストール</h3>
+<h3 id="toc_6">Pythonをインストール</h3>
 
 <blockquote>
 <p>pkgファイルをダウンロード、実行してPythonをインストール</p>
@@ -392,7 +397,7 @@ Python 2.7.16</code></pre></div>
 <div><pre><code class="language-:Terminal">$ python3 -V
 Python 3.9.1</code></pre></div>
 
-<p>自身がダウンロードしたpythonのバージョンが表示されていれば成功です。</p>
+<p>自身がダウンロードしたPythonのバージョンが表示されていれば成功です。</p>
 
 <p>次の章では実際にPythonプログラムを書いていきましょう。</p>
 
